<?xml version="1.0"?>
<package format="2">
  <name>mobile_rob_dev_sim</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description and Pure Pursuit implementation for mobile_rob_dev_sim</p>
    <p>This package contains configuration data, 3D models, launch files, and path following implementation for mobile_rob_dev_sim robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="vivaldini@ufscar.br"/>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for mobile_rob_dev_sim -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <!-- Dependencies for pure pursuit -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>orocos_kdl</depend>
  <depend>ackermann_msgs</depend>
  <depend>rospy</depend>

  <export>
    <architecture_independent/>
  </export>
</package>

